--- a/src/sass/_custom-properties.scss
+++ b/src/sass/_custom-properties.scss
@@ -34,6 +34,12 @@
      --color-content-links-underline: #{$color-content-links-underline};
      --color-content-links-hover: #{$color-content-links-hover};
      
+     --color-button-text: #{$color_button_text};
+     --color-button-bg: #{$color_button_bg};
+     --color-button-hover-text: #{$color-button-hover-text};
+     --color-button-hover-bg: #{$color-button-hover-bg};
+     
+
     --color-footer-bg: #{$color-footer-bg};
     --color-footer-text: #{$color-footer-text};
     --color-hero-bg: #{$color-hero-bg};
