--- a/src/sass/backend/_customizer.scss
+++ b/src/sass/backend/_customizer.scss
@@ -1,7 +1,7 @@
 /*-----------------------------------------------------------------------------------*/
 /* Customizer view
 /*-----------------------------------------------------------------------------------*/
-$color_customizer_buttons: #0085ba;
+
 
 #customize-controls #sub-accordion-section-header_image img {
     height: 65px;
@@ -80,8 +80,8 @@ $color_customizer_buttons: #0085ba;
 	    background: var(--color-StandardHellgrau);
 	}
 	select[multiple]:focus option:checked {
-	  background: $color_customizer_buttons;
-	  color: $colorMainBackground;
+	  background: var(--color-button-bg);
+	  color: var(--color-MainBackground); 
 	}
     }
     
@@ -106,17 +106,14 @@ $color_customizer_buttons: #0085ba;
 	    width: 20px;
 	    height: 20px;
 	    border-radius: 50%;
-	    background: $color_customizer_buttons;
+	    background:  var(--color-button-bg);
 	    cursor: pointer;
 	    transition: background .15s ease-in-out;
 	}
 
-	.range-slider__range::-webkit-slider-thumb:hover {
-	    background: $color_customizer_buttons;
-	}
-
+	.range-slider__range::-webkit-slider-thumb:hover,
 	.range-slider__range:active::-webkit-slider-thumb {
-	    background: $color_customizer_buttons;
+	    background: var(--color-button-bg);
 	}
 
 	.range-slider__range::-moz-range-thumb {
@@ -124,28 +121,25 @@ $color_customizer_buttons: #0085ba;
 	    height: 20px;
 	    border: 0;
 	    border-radius: 50%;
-	    background: $color_customizer_buttons;
+	    background:  var(--color-button-bg);
 	    cursor: pointer;
 	    transition: background .15s ease-in-out;
 	}
 
-	.range-slider__range::-moz-range-thumb:hover {
-	    background:  $color_customizer_buttons;
-	}
-
+	.range-slider__range::-moz-range-thumb:hover,
 	.range-slider__range:active::-moz-range-thumb {
-	    background: $color_customizer_buttons;
+	    background:  var(--color-button-bg);
 	}
 
 	.range-slider__value {
 	    display: inline-block;
 	    position: relative;
 	    width: 30px;
-	    color: $colorMainBackground;
+	    color:  var(--color-MainBackground); 
 	    line-height: 20px;
 	    text-align: center;
 	    border-radius: 3px;
-	    background:  $color_customizer_buttons;
+	    background:   var(--color-button-bg);
 	    padding: 2px 5px;
 	    margin-left: 8px;
 	}
