--- a/src/sass/structure/layout/_base.scss
+++ b/src/sass/structure/layout/_base.scss
@@ -6,6 +6,7 @@
 body {
 	margin: 0;
 	color: var(--color-Text);
+	background-color: var(--color-MainBackground);
 	font-size: 16px;
 	font-size: 1rem;
 	line-height: 1.35;
