--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -14,57 +14,64 @@ Mixins File for Wordpress Theme FAU
 }
 
 @mixin border-top-radius($radius) {
-  border-top-right-radius: $radius;
-   border-top-left-radius: $radius;
-   background-clip: padding-box;
+    border-top-right-radius: $radius;
+    border-top-left-radius: $radius;
+    background-clip: padding-box;
 }
+
 @mixin border-right-radius($radius) {
-  border-bottom-right-radius: $radius;
-     border-top-right-radius: $radius;
-     background-clip: padding-box;
+    border-bottom-right-radius: $radius;
+    border-top-right-radius: $radius;
+    background-clip: padding-box;
 }
+
 @mixin border-bottom-radius($radius) {
-   border-bottom-right-radius: $radius;
-   border-bottom-left-radius: $radius;
-   background-clip: padding-box;
+    border-bottom-right-radius: $radius;
+    border-bottom-left-radius: $radius;
+    background-clip: padding-box;
 }
+
 @mixin border-left-radius($radius) {
-  border-bottom-left-radius: $radius;
-     border-top-left-radius: $radius;
-     background-clip: padding-box;
+    border-bottom-left-radius: $radius;
+    border-top-left-radius: $radius;
+    background-clip: padding-box;
 }
 
 @mixin linear-gradient($fromColor, $toColor) {
     background-color: $fromColor; /* Fallback Color */
     background-image: linear-gradient(to right, $fromColor, $toColor);
 }
+
 @mixin linear-top-gradient($fromColor, $toColor) {
     background-color: $fromColor; /* Fallback Color */
     background-image: linear-gradient(to bottom, $fromColor, $toColor);
 }
+
 @mixin linear-gradient-three($fromColor, $toColor, $nextColor) {
     background-color: $fromColor; /* Fallback Color */
-    background-image: linear-gradient(to right, $fromColor, $toColor,$nextColor);
+    background-image: linear-gradient(to right, $fromColor, $toColor, $nextColor);
 }
+
 @mixin linear-top-gradient-three($fromColor, $toColor, $nextColor) {
     background-color: $fromColor; /* Fallback Color */
-    background-image: linear-gradient(to bottom, $fromColor, $toColor,$nextColor);
+    background-image: linear-gradient(to bottom, $fromColor, $toColor, $nextColor);
 }
 
 @mixin radial-gradient($color2, $color1) {
     background: $color2;
-    background: radial-gradient(ellipse at center, $color1 0%,$color2 100%);
+    background: radial-gradient(ellipse at center, $color1 0%, $color2 100%);
 }
 
 @mixin radial-gradient-image($color2, $color1, $image) {
     background-color: $color2;
     background: $image, $color2;
-    background: $image, radial-gradient(ellipse at center, $color1 0%,$color2 100%);
+    background: $image, radial-gradient(ellipse at center, $color1 0%, $color2 100%);
 }
 
 @mixin transition($duration, $params) {
     transition: $duration $params;
 }
+
 @mixin transform-translate($tx, $ty) {
     transform: translate($tx, $ty);
 }
@@ -75,7 +82,7 @@ Mixins File for Wordpress Theme FAU
 
 @mixin placeholder($color) {
     ::placeholder {
-	    color: $color;
+        color: $color;
     }
 }
 
@@ -86,7 +93,7 @@ Mixins File for Wordpress Theme FAU
     background: none;
 
     &:before {
-	    display: none;
+        display: none;
     }
 }
 
@@ -96,53 +103,54 @@ Mixins File for Wordpress Theme FAU
     display: table;
     border-bottom: 1px solid var(--color-primary-ci-hell);
     width: 100%;
-			
+
 
     &:before {
-	@extend .fa;
-	@extend .fa-angle-right;	
-	font-weight: bold;
-	display: table-cell;
-	vertical-align: middle;
-	color:  var(--color-Default);
-	width: 5px;
+        @extend .fa;
+        @extend .fa-angle-right;
+        font-weight: bold;
+        display: table-cell;
+        vertical-align: middle;
+        color: var(--color-Default);
+        width: 5px;
     }
-		
+
     a {
-	    text-decoration: none;
-	    display: table-cell;
-	    padding: 5px 12px;
-	    font-size: 13px;
-	    line-height: 16px;
+        text-decoration: none;
+        display: table-cell;
+        padding: 5px 12px;
+        font-size: 13px;
+        line-height: 16px;
     }
 
     a:hover, a:focus {
-	    text-decoration: none;
-	    background-color: var(--color-primary-hellste);
+        text-decoration: none;
+        background-color: var(--color-primary-hellste);
     }
 }
 
 @mixin inline-block() {
-    display: inline-block; 
+    display: inline-block;
 }
+
 @mixin hideout() {
-    position:absolute;
-    left:-10000px;
-    top:auto;
-    width:1px;
-    height:1px;
-    overflow:hidden;
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
 }
 
 @function px2rem($font-size, $base-font-size: $font-size-gridbase) {
-	@return math.div($font-size, $base-font-size) + rem;
+    @return math.div($font-size, $base-font-size) + rem;
 }
 
 @mixin px2rem($font-size, $base-font-size: $font-size-gridbase, $line: $font-size * 1.5) {
-  // font-size: $font-size + px; // für den IE8
-  // line-height: ($line) + px;
-  font-size: math.div(floor(math.div($font-size, $base-font-size) * 1000), 1000) + rem;
-  line-height: math.div(ceil(math.div($line, $base-font-size) * 1000), 1000) + rem;
+    // font-size: $font-size + px; // für den IE8
+    // line-height: ($line) + px;
+    font-size: math.div(floor(math.div($font-size, $base-font-size) * 1000), 1000) + rem;
+    line-height: math.div(ceil(math.div($line, $base-font-size) * 1000), 1000) + rem;
 }
 
 @mixin morelink() {
@@ -154,20 +162,20 @@ Mixins File for Wordpress Theme FAU
     @include px2rem($font-size-textbuttons);
 
     a {
-	@include inline-block;
-	@include border-radius(3px);
-	@include px2rem($font-size-textbuttons);
-	
-	color: var(--color-primary-basis-kontrast);
-	background: var(--color-primary-basis);
-	padding: 6px 10px;
-	text-decoration: none;
+        @include inline-block;
+        @include border-radius(3px);
+        @include px2rem($font-size-textbuttons);
 
-	
-	&:hover, &:focus {
-		background: var(--color-primary-dunkler);
-		text-decoration: none;
-	}
+        color: var(--color-primary-basis-kontrast);
+        background: var(--color-primary-basis);
+        padding: 6px 10px;
+        text-decoration: none;
+
+
+        &:hover, &:focus {
+            background: var(--color-primary-dunkler);
+            text-decoration: none;
+        }
     }
 
 }
@@ -180,32 +188,31 @@ Mixins File for Wordpress Theme FAU
 
     &:hover,
     &:focus {
-	font-weight: bold;
-	color: inherit;
-	box-shadow: inherit;
-	text-decoration: underline;
+        font-weight: bold;
+        color: inherit;
+        box-shadow: inherit;
+        text-decoration: underline;
     }
 }
 
 @mixin styledcontentlink() {
     cursor: pointer;
-	    
+
     word-wrap: break-word;
     color: var(--color-content-links);
     box-shadow: inset 0 -2px 0 var(--color-content-links-underline);
-//    border-bottom: 1px solid var(--color-content-links-underline);
-    transition:    all .3s ease-out; //box-shadow 0.3s ease-in-out;
+    //    border-bottom: 1px solid var(--color-content-links-underline);
+    transition: all .3s ease-out; //box-shadow 0.3s ease-in-out;
     text-decoration: none;
     padding: 3px 1px;
 
- 
-    
+
     &:focus,
     &:hover {
-	text-decoration: none;
-	// color: var(--color-content-links-underline);
-	 color: var(--color-content-links-hover);
-	 box-shadow: inset 0 -28px 0  var(--color-content-links-underline);
+        text-decoration: none;
+        // color: var(--color-content-links-underline);
+        color: var(--color-content-links-hover);
+        box-shadow: inset 0 -28px 0 var(--color-content-links-underline);
     }
 }
 
@@ -213,38 +220,38 @@ Mixins File for Wordpress Theme FAU
     @include inline-block;
     @include border-radius($radius);
     @include px2rem($font-size-textbuttons);
-	
+
     color: var(--color-primary-basis-kontrast);
     background: var(--color-primary-basis);
     padding: 6px 10px;
     text-decoration: none;
 
-	
+
     &:hover, &:focus {
-    	background: var(--color-primary-dunkler);
-	text-decoration: none;
+        background: var(--color-primary-dunkler);
+        text-decoration: none;
     }
 }
 
 // Set Font Style
 
-@mixin fontFace($family,$src,$weight: normal,$style: normal,$withlocal: true) {   
-  @font-face {
-    font-family: $family;
-     @if $withlocal {
-	src: local($family), 
-	url('#{$src}.woff2') format('woff2'), 
-	url('#{$src}.woff') format('woff'),
-	url('#{$src}.ttf') format('truetype');
-     } @else {
-	src: url('#{$src}.woff2') format('woff2'), 
-	url('#{$src}.woff') format('woff'),
-	url('#{$src}.ttf') format('truetype');
-     }
+@mixin fontFace($family,$src,$weight: normal,$style: normal,$withlocal: true) {
+    @font-face {
+        font-family: $family;
+        @if $withlocal {
+            src: local($family),
+            url('#{$src}.woff2') format('woff2'),
+            url('#{$src}.woff') format('woff'),
+            url('#{$src}.ttf') format('truetype');
+        } @else {
+            src: url('#{$src}.woff2') format('woff2'),
+            url('#{$src}.woff') format('woff'),
+            url('#{$src}.ttf') format('truetype');
+        }
 
-    font-style: $style;
-    font-weight: $weight;
-  }
+        font-style: $style;
+        font-weight: $weight;
+    }
 }
 
 
@@ -254,14 +261,16 @@ Mixins File for Wordpress Theme FAU
 // See: https://hugogiraudel.com/2016/10/13/css-hide-and-seek/
 
 @mixin sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border: 0;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    min-width: 1px;
+    min-height: 1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
 }
 
 // Use in conjunction with .sr-only to only display content when it's focused.
@@ -271,14 +280,14 @@ Mixins File for Wordpress Theme FAU
 // Credit: HTML5 Boilerplate
 
 @mixin sr-only-focusable {
-  &:active,
-  &:focus {
-    position: static;
-    width: auto;
-    height: auto;
-    overflow: visible;
-    clip: auto;
-    white-space: normal;
-  }
+    &:active,
+    &:focus {
+        position: static;
+        width: auto;
+        height: auto;
+        overflow: visible;
+        clip: auto;
+        white-space: normal;
+    }
 }
 
