Breche Logo in sehr schmalen Bildschirmen (wieder) um

--- a/src/sass/structure/header/_branding.scss
+++ b/src/sass/structure/header/_branding.scss
@@ -5,194 +5,205 @@
 
 #headerwrap header {
     .branding {
-	
-	    
-	.sitetitle {
-	    display: inline-block;
-	    color:  var(--color-primary-basis-kontrast);
-	    background-color: var(--color-primary-basis);
-	    padding: 0;
-	    margin: 0;
-	    height: auto;	
-	    text-align: center;
-	    text-decoration: none;
-	    font-family: $fontStackFAU;
-	    font-weight: bold;
-	    width: 100vw;
-	    
-	    @include px2rem($font-size-mobile-sitetitle, $font-size-gridbase);
-
-	    .longtitle & {
-		@include px2rem($font-size-mobile-sitetitle - 2, $font-size-gridbase);
-	    }
-
-	   
-	    
-	    @media (min-width: $screen-sm) {		
-		background-color:  var(--color-primary-basis-kontrast);
-		color: var(--color-primary-basis);
-		width: auto;
-		
-		@include px2rem($font-size-desktop-sitetitle, $font-size-gridbase);
-
-		.nologo.longtitle & {
-			    @include px2rem($font-size-desktop-sitetitle - 2, $font-size-gridbase);
-		}
-
-		a {
-			vertical-align: bottom;
-		}
-	    }
-	    @media (min-width: $screen-sm) {
-		margin: 10px 0;
-		text-align: left;
-	    }
-	    a {
-		text-decoration: none;
-		color: var(--color-primary-basis-kontrast);
-		@media (min-width: $screen-sm) {
-		     color: var(--color-primary-basis);
-		}
-	    }
 
 
-	    img,
-	    svg {
-		display: none;
-		@media (min-width: $screen-sm) {
-		    display: inline-block;
-		    max-width: 400px;
-		    max-height: 158px;
-		    object-fit: contain;
-		    object-position: left;
-		 
-		    @include px2rem($font-size-desktop-sitetitle, $font-size-gridbase);
-		}
-	    }
-	    svg {
-		@media (min-width: $screen-sm) {
-		   width: auto;
-		   height: auto;
-		}
-	    }
-	    
-	    span {
-		margin: 10px 15px;
-		display: inline-block;
-		hyphens: auto;
-		@media (min-width: $screen-sm) {
-		    background: inherit;
-		    hyphens: manual;
-		    max-width: 225px;
-		    margin: 10px 15px 0 0;
-		    .nologo.longtitle & {
-			hyphens: auto;
-		    }
-		}
-	    }
+        .sitetitle {
+            display: inline-block;
+            color: var(--color-primary-basis-kontrast);
+            background-color: var(--color-primary-basis);
+            padding: 0;
+            margin: 0;
+            height: auto;
+            text-align: center;
+            text-decoration: none;
+            font-family: $fontStackFAU;
+            font-weight: bold;
+            width: 100vw;
 
-	    .visiblelogo {
-		@media (min-width: $screen-sm) {
-		       display: none;
-		}
-	    }
+            @include px2rem($font-size-mobile-sitetitle, $font-size-gridbase);
 
-	}
-	.textlogo {
-	    width: 400px;
-	    display: flex;
-	    flex-direction: row;
-	    justify-content: flex-start;
-	    flex-wrap: nowrap;
-	    column-gap: 15px;
-	    row-gap: 0;
-	    
-	    @media (min-width: $screen-sm) and (max-width: $screen-lg) {
-		 flex-wrap: wrap;
-		 width: 240px;
-	    }
-	    
-	  
-	    
-	    
-	    .baselogo {
-		flex: 0 0 148px;
-	    }
-	    .text {
-		font-family: $fontStackFAU;
-		font-weight: 500;
-		font-size: 15px;
-		line-height: 20px;
-		letter-spacing: 0.2px;
-		
-		@media (min-width: $screen-xl) {
-		    margin-top: -5px;
-		    // Schrift soll mit Oberkante des Logos beginnen, wenn es rechts daneben ist :/
-		}
-		
-		.fau-title-place,
-		.fau-title {
-		    display: block;
-		    color: var(--color-FAU);
-		}
-		
-		.zentral {
-		    color: var(--color-FAU);
-		}
-		.phil {
-		    color: var(--color-phil-ci-hell);
-		}
-		.nat {
-		    color: var(--color-nat-ci-hell);
-		}
-		.med {
-		    color: var(--color-med-ci-hell);
-		}
-		.rw {
-		    color: var(--color-rw-ci-hell);
-		}
-		.tf {
-		    color: var(--color-tf-ci-hell);
-		}
-		.website-shortcut::before {
-		    content: "| ";
-		} 
+            .longtitle & {
+                @include px2rem($font-size-mobile-sitetitle - 2, $font-size-gridbase);
+            }
 
-		
-		
-	    }
-	    
-	}
 
-	a {
-	    text-decoration: none;
-	    transition: opacity 1s ease 0s;
-	} 
-	a.generated:focus,
-	a.generated:hover {
-	     filter: grayscale(80%);
-	     text-decoration: underline;
-	}
+            @media (min-width: $screen-sm) {
+                background-color: var(--color-primary-basis-kontrast);
+                color: var(--color-primary-basis);
+                width: auto;
+
+                @include px2rem($font-size-desktop-sitetitle, $font-size-gridbase);
+
+                .nologo.longtitle & {
+                    @include px2rem($font-size-desktop-sitetitle - 2, $font-size-gridbase);
+                }
+
+                a {
+                    vertical-align: bottom;
+                }
+            }
+            @media (min-width: $screen-sm) {
+                margin: 10px 0;
+                text-align: left;
+            }
+
+            a {
+                text-decoration: none;
+                color: var(--color-primary-basis-kontrast);
+                @media (min-width: $screen-sm) {
+                    color: var(--color-primary-basis);
+                }
+            }
+
+
+            img,
+            svg {
+                display: none;
+                @media (min-width: $screen-sm) {
+                    display: inline-block;
+                    max-width: 400px;
+                    max-height: 158px;
+                    object-fit: contain;
+                    object-position: left;
+
+                    @include px2rem($font-size-desktop-sitetitle, $font-size-gridbase);
+                }
+            }
+
+            svg {
+                @media (min-width: $screen-sm) {
+                    width: auto;
+                    height: auto;
+                }
+            }
+
+            span {
+                margin: 10px 15px;
+                display: inline-block;
+                hyphens: auto;
+                @media (min-width: $screen-sm) {
+                    background: inherit;
+                    hyphens: manual;
+                    max-width: 225px;
+                    margin: 10px 15px 0 0;
+                    .nologo.longtitle & {
+                        hyphens: auto;
+                    }
+                }
+            }
+
+            .visiblelogo {
+                @media (min-width: $screen-sm) {
+                    display: none;
+                }
+            }
+
+        }
+
+        .textlogo {
+            width: 400px;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            flex-wrap: nowrap;
+            column-gap: 15px;
+            row-gap: 0;
+
+            @media (max-width: $screen-xs),
+            (min-width: $screen-sm) and (max-width: $screen-lg) {
+                flex-wrap: wrap;
+                width: 240px;
+            }
+
+            .baselogo {
+                flex: 0 0 148px;
+            }
+
+            .text {
+                font-family: $fontStackFAU;
+                font-weight: 500;
+                font-size: 15px;
+                line-height: 20px;
+                letter-spacing: 0.2px;
+
+                @media (min-width: $screen-xl) {
+                    margin-top: -5px;
+                    // Schrift soll mit Oberkante des Logos beginnen, wenn es rechts daneben ist :/
+                }
+
+                .fau-title-place,
+                .fau-title {
+                    display: block;
+                    color: var(--color-FAU);
+                }
+
+                .zentral {
+                    color: var(--color-FAU);
+                }
+
+                .phil {
+                    color: var(--color-phil-ci-hell);
+                }
+
+                .nat {
+                    color: var(--color-nat-ci-hell);
+                }
+
+                .med {
+                    color: var(--color-med-ci-hell);
+                }
+
+                .rw {
+                    color: var(--color-rw-ci-hell);
+                }
+
+                .tf {
+                    color: var(--color-tf-ci-hell);
+                }
+
+                .website-shortcut::before {
+                    content: "| ";
+                }
+
+
+            }
+
+        }
+
+        a {
+            text-decoration: none;
+            transition: opacity 1s ease 0s;
+        }
+
+        a.generated:focus,
+        a.generated:hover {
+            filter: grayscale(80%);
+            text-decoration: underline;
+        }
     }
+
     @media (max-width: $screen-sm - 1) {
-	
-	.md-showsitelogo:not(.nologo) & .branding {
 
-	    width: 100%;
-	    text-align: center;
-	    .sitetitle {	   
-		margin: 10px auto;
-		background-color:  var(--color-primary-basis-kontrast);
-		img,
-		svg {
+        .md-showsitelogo:not(.nologo) & .branding {
 
-		    display: inline-block;
-		}
-		span.visiblelogo {
-		    display: none;
-		}
-	    }
-	}
+            width: 100%;
+            text-align: center;
+
+            .sitetitle {
+                margin: 10px auto;
+                background-color: var(--color-primary-basis-kontrast);
+
+                img,
+                svg {
+
+                    display: inline-block;
+                }
+
+                span.visiblelogo {
+                    display: none;
+                }
+            }
+        }
     }
 
 }
